# Cloud-Monitoring

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  api.py  deployment.md  fly.toml  main.py  pyproject.toml  test_bedrock.py  test_huggingface.py  test_openrouter.py
.deepeval/: .deepeval_telemetry.txt
data/: deployments.json  logs.json  metrics.json
data_generator/: synthetic_metrics.py
src/: agents.py  commander.py  graph.py  llm_factory.py  mcp_server.py  models.py
streamlit/: main.py  requirements.txt
tests/: conftest.py  test_agents.py
